[metadata]
name = ohk
version = 0.0.1
url = https://github.com/kbairak/ohk
author = Konstantinos Bairaktaris
author_email = ikijob@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
description = An interactive alternative to grep and awk
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:
install_requires =
    urwid == 2.1.2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    ohk = ohk.ohk:main
